# murat

./: .gitignore  .muse  AAA_README.org  CMakeLists.txt  SConscript
alg/: CMakeLists.txt  SConscript  TFeldmanCousinsA.cc  TLogLHR.cc  TLsqSums4.cc
alg/alg/: Linkdef.h  TFeldmanCousinsA.hh  TLogLHR.hh  TLsqSums4.hh
alg/alg/dict/: TFeldmanCousinsA_linkdef.h  TLsqSums4_linkdef.h
ana/: CMakeLists.txt  InitVirtualDetectors.cc  NavState.cc  SConscript  TAnaModule.cc  TBeamFlashAnaModule.cc  TCalAnaModule.cc  TCaloDose.cc  TCaloTimeRes.cc  TClusterAnaModule.cc  TColl1DoseAnaModule.cc  TColl3DoseAnaModule.cc  TCosmicsAnaModule.cc  TDegraderRpcAnaModule.cc  TDioCalib.cc  TDioCalibModule.cc  TDoseAnaModule.cc  TEmuAnaModule.cc  TEmuModule.cc  TEventDisplayModule.cc  TEventDisplayUtils.cc  TFilterModule.cc  TFitDioRcSpectrum.cc  TFunAnaModule.cc  TG4ValidationModule.cc  TGenAnaModule.cc  THelixAnaModule.cc  TMomscaleAnaModule.cc  TMu2eEveMagField.cc  TMuonStopAnaModule.cc  TPidAnaModule.cc  TPipenuAnaModule.cc  TPolFitSpectrum.cc  TRMCAnaModule.CC  TSimpAnaModule.cc  TSpmcAnaModule.cc  TStepPointMCAnaModule.cc  TStrawHitAnaModule.cc  TTrackAnaModule.cc  TTrackAnaModuleA.CC  (+23 more)
ana/ana/: #TVDetAnaModule.hh#  .#SimPar_t.hh  ClusterHist_t.hh  CrvHist_t.hh  EventHist_t.hh  EventPar_t.hh  GenpHist_t.hh  HelixHist_t.hh  HelixPar_t.hh  HistBase_t.h  InitVirtualDetectors.hh  Linkdef.h  NavState.hh  SimPar_t.hh  SimpData_t.hh  SimpHist_t.hh  TAnaModule.hh  TAnaPart.hh  TBeamFlashAnaModule.hh  TCalAnaModule.hh  TCaloDose.hh  TCaloTimeRes.hh  TClusterAnaModule.hh  TColl1DoseAnaModule.hh  TColl3DoseAnaModule.hh  TCosmicsAnaModule.hh  TDegraderRpcAnaModule.hh  TDioCalib.hh  TDioCalibModule.hh  TDoseAnaModule.hh  TEmuAnaModule.hh  TEmuModule.hh  TEventDisplayModule.hh  TEventDisplayUtils.hh  TFilterModule.hh  TFitDioRcSpectrum.hh  TFunAnaModule.hh  TG4ValidationModule.hh  TGenAnaModule.hh  THelixAnaModule.hh  (+39 more)
ana/ana/dict/: CrvHist_t_linkdef.h  TAnaModule_linkdef.h  TBeamFlashAnaModule_linkdef.h  TCalAnaModule_linkdef.h  TCaloDose_linkdef.h  TCaloTimeRes_linkdef.h  TClusterAnaModule_linkdef.h  TColl1DoseAnaModule_linkdef.h  TColl3DoseAnaModule_linkdef.h  TCosmicsAnaModule_linkdef.h  TDegraderRpcAnaModule_linkdef.h  TDioCalibModule_linkdef.h  TDioCalib_linkdef.h  TDoseAnaModule_linkdef.h  TEmuAnaModule_linkdef.h  TEmuModule_linkdef.h  TEventDisplayModule_linkdef.h  TEventDisplayUtils_linkdef.h  TFilterModule_linkdef.h  TFitDioRcSpectrum_linkdef.h  TFunAnaModule_linkdef.h  TG4ValidationModule_linkdef.h  TGenAnaModule_linkdef.h  THelixAnaModule_linkdef.h  TMomscaleAnaModule_linkdef.h  TMu2eEveMagField_linkdef.h  TMuonStopAnaModule_linkdef.h  TPidAnaModule_linkdef.h  TPipenuAnaModule_linkdef.h  TPolFitSpectrum_linkdef.h  TRMCAnaModule_linkdef.H  TSimpAnaModule_linkdef.h  TSpmcAnaModule_linkdef.h  TStepPointMCAnaModule_linkdef.h  TStrawHitAnaModule_linkdef.h  TTrackAnaModuleA_linkdef.h  TTrackAnaModuleBase_linkdef.h  TTrackAnaModule_linkdef.h  TTrackCompModule_linkdef.h  TTrackPidAnaModule_linkdef.h  (+16 more)
ana/scripts/: bflash.C  calorimeter.C  cosmics.C  dio_calib.C  dose.C  drpc.C  fun.C  g4val.C  genp.C  genp.C.save  helix.C  hits.C  load_stnana_scripts_murat.C  modules.hh  momscale.C  mustop.C  pid.C  pipenu.C  reco_eff_ana.C  rmc.C  simp.C  spmc.C  track.C  track.C.~1.10.~  trigger.C  vdet.C
data/: ce_photos.tbl  dio_spectrum_al27_watanabe.txt  dio_spectrum_ca40_hertzog_alder.txt  dio_spectrum_ca40_watanabe.txt  harp_piminus_Pb_data.txt  harp_piminus_Ta_data.txt  harp_piplus_Pb_data.txt  harp_piplus_Ta_data.txt  mu2e_bfield_map.txt  muon_arrival_to_st.csv  muon_decays_at_st.csv  pion_arrival_to_st.csv
doc/: AAA_MURAT_DOC.org  virtual_detectors.org
fcl/: dumpCrvNumerology.fcl  dumpMCTrajectories.fcl  dumpTrackerNumerology.fcl  dumpVirtualDdetectors.fcl  dump_calo_geometry.fcl  dump_crv_numerology.fcl  dump_tracker_numerology.fcl  print_bfield.fcl  prolog.fcl  templates.fcl
gaas/: AAA_GAAS.org  GaasEventAction.cc  GaasG4_module.cc  GaasLayerAna_module.cc  GaasPhysicsList.cc  GaasSandwichAna_module.cc  GaasStepLimiterPhysConstructor.cc  GaasSteppingAction.cc  GaasTrackingAction.cc  GaasWorld.cc  SConscript  addGaasStepLimiter.CC  constructGaasLayer.cc  constructGaasPbSandwich.CC  constructGaasPbSandwich.cc
geom/: geom_01_05.txt  geom_01_Mau8.txt  geom_01_baf2_180.txt  geom_01_baf2_40_670_330_670.txt  geom_01_cal_r700.txt  geom_01_cd3.txt  geom_01_disk.txt  geom_01_disk_670_330_700.txt  geom_01_disk_670_330_700_Mau8.txt  geom_01_disk_670_360_640.txt  geom_01_disk_670_360_700.fcl  geom_01_disk_670_360_700_Mau8.txt  geom_01_disk_680_Mau8.txt  geom_01_qgsp_bert.txt  geom_01_tdr.txt  geom_01_vane_Mau8.txt  geom_cd3_half_field.txt  geom_common_tracker_shielding_lead.txt  geom_print_vd.txt  geom_tdr.txt  geom_tdr_half_field.txt  geom_ttracker_03.txt  geom_ttracker_04.txt
mod/: CMakeLists.txt  CaloClusterCheck_module.cc  ComboHitSorter_module.cc  DetStepAna_module.cc  DumpCaloGeometry_module.cc  DumpCrvNumerology_module.cc  DumpEventNumber_module.cc  DumpGeometry_module.cc  DumpMCTrajectories_module.cc  DumpTrackerGeometry_module.cc  DumpTrackerNumerology_module.cc  FilterEcalMVATrigger_module.CC  GenpHist_module.cc  LLHRFilter_module.CC  LLHRFilter_module.cc  PrintBField_module.cc  ReadGenParticles_module.cc  SConscript  StrawChargeDeposition_module.cc  StrawHitReco2_module.cc  StrawHitRecoAna_module.cc  TCalm001_module.cc  TCalm002_module.CC  TCalm002_module.cc  TCalm003_module.CC  TCalm003_module.cc  TCalm004_module.CC  TCalm004_module.cc  TCalm005_module.cc  TCalm006_module.cc  TTrackRecoAna_module.cc  TZClusterFinderAna_module.CC  TZClusterFinderAna_module.cc  TZClusterFinderDiag_tool.CC  TZClusterFinderDiag_tool.cc  TZClusterFinder_module.cc  TZClusterFinder_types.cc  TrackFilter_module.cc  TrackRecoCheck_module.cc  TrackerMCCheck_module.cc  (+1 more)
mod/mod/: LLHRFilter_module.hh  TCalm002_module.hh  TCalm003_module.hh  TCalm004_module.hh  TCalm005_module.hh  TCalm006_module.hh  TTrackRecoAna_module.hh  TZClusterFinder_types.hh  TrkFragmentAna_module.hh
mod/mod/dict/: TrkFragmentAna_module_linkdef.h
(+1437 files in other folders)
